--- a/frontend/src/Homepage/Header/Header.css
+++ b/frontend/src/Homepage/Header/Header.css
@@ -1,8 +1,9 @@
 .header-main {
     text-align: center;
     padding: var(--spacing-large);
+    margin-top: 40px;
 }
 
 .header-text{
-    font-size: var(--font-size-xxl);
+    font-size: var(--font-size-xxxl);
 }
