--- a/frontend/src/Homepage/TxnForm/TxnForm.css
+++ b/frontend/src/Homepage/TxnForm/TxnForm.css
@@ -1,6 +1,8 @@
 .txnForm-main{
+  margin-top: var(--spacing-medium);
   box-sizing: border-box;
   border-radius: 100px;
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+  align-items: center;
 }
