--- a/frontend/src/Homepage/TxnForm/TxnForm.css
+++ b/frontend/src/Homepage/TxnForm/TxnForm.css
@@ -6,3 +6,10 @@
   flex-direction: column;
   align-items: center;
 }
+
+.last-row{
+  display: flex;
+  justify-content: space-between; 
+  align-items: center; 
+  width: 90%;
+}
