--- a/frontend/src/Homepage/TxnForm/formComponents/styles/PageControl.css
+++ b/frontend/src/Homepage/TxnForm/formComponents/styles/PageControl.css
@@ -38,3 +38,14 @@
     transform: scale(0.95);
   }
   
+  @media (max-width: 600px) {
+    .page-size-input{
+        width: 100px;
+        font-size: 12px;
+    }
+
+    .pagination-button{
+        padding: 8px 14px;
+        font-size: 12px;
+    }
+}
