--- a/frontend/src/Homepage/TxnForm/formComponents/styles/TxnFormRow.css
+++ b/frontend/src/Homepage/TxnForm/formComponents/styles/TxnFormRow.css
@@ -1,3 +1,11 @@
+.tx-hash{
+    cursor: pointer;
+}
+
+.tx-hash:hover{
+    color: #ccc;
+}
+
 @media (max-width: 900px) {
     .form-row{
         font-size: 13px;
